--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
   },
   "dependencies": {
     "@fontsource/plus-jakarta-sans": "^5.0.20",
+    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
     "@theme-toggles/react": "^4.1.0",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.381.0",
     "million": "3.1.1",
@@ -33,7 +36,8 @@
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6.23.1",
-    "tailwind-merge": "^2.3.0"
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^19.2.2",
