--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
+    "react-icons": "^5.3.0",
     "react-input-color": "^4.0.1",
     "react-router-dom": "^6.23.1",
     "tailwind-merge": "^2.3.0",
